# gutenberg

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  ChangeLog  Dockerfile  GUTENBERG_STRUCTURE.md  MANIFEST.in  README.md  TODO  TODO.md  dump-gutenberg.py  get_js_deps.sh  gutenberg2zim  hatch_build.py  languages_06_2018  mapping_DB_XML  offliner-definition.json  pypi-readme.rst  pyproject.toml  rdf_parser.py  requirements.pip  roadmap.md  setup.py
.github/: FUNDING.yml  stale.yml
.github/workflows/: Publish.yaml  PublishDockerDevImage.yaml  QA.yaml  Tests.yaml  docker.yml  release.yml  update-zim-offliner-definition.yaml
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/components/: AppHeader.vue  Sort.vue
frontend/src/router/: index.js
frontend/src/styles/: detail.css
frontend/src/views/: About.vue  BookDetail.vue  Home.vue
gutenberg/: __init__.py  checkdeps.py  database.py  download.py  export.py  iso639.py  l10n.py  rdf.py  rdf_parser.py  urls.py  utils.py  zim.py
gutenberg/templates/: base.html  book_infobox.html  cover_article.html  index.html
gutenberg/templates/css/: style.css  style2.css
gutenberg/templates/jquery/: jquery.persist.js
gutenberg/templates/jquery-ui/: jquery-ui.theme.min.css
gutenberg/templates/js/: l10n.js  tools.js
gutenberg/templates/l10n/: data.en.properties  data.fr.properties  locales.ini
gutenbergtozim/: .jsbeautifyrc  __init__.py  checkdeps.py  database.py  download.py  export.py  iso639.py  l10n.py  pg_archive_urls.py  rdf.py  s3.py  shared.py  urls.py  utils.py  zim.py
gutenbergtozim/templates/: Home.html  base.html  book_infobox.html  bookshelf.html  bookshelf_home.html  cover_article.html
gutenbergtozim/templates/css/: pure-skin-gutenberg.css  style.css
gutenbergtozim/templates/datatables/: datatables.css  datatables.js  datatables.min.css  datatables.min.js
gutenbergtozim/templates/jquery-ui/: jquery-ui.min.css
gutenbergtozim/templates/js/: l10n.js  tools.js
gutenbergtozim/templates/l10n/: data.de.properties  data.en.properties  data.fr.properties  locales.ini
locales/: af.json  ar.json  arp.json  bg.json  bo.json  br.json  ca.json  ceb.json  cs.json  cy.json  da.json  de.json  el.json  en.json  enm.json  eo.json  es.json  et.json  fa.json  fi.json  fr.json  fur.json  fy.json  ga.json  gd.json  gl.json  he.json  hi.json  hu.json  hy.json  ia.json  ilo.json  is.json  it.json  iu.json  ja.json  ko.json  la.json  lb.json  mi.json  (+28 more)
scraper/: README.md  hatch_build.py  pyproject.toml  tasks.py
scraper/docs/: GUTENBERG_STRUCTURE.md  JSON_FILE_STRUCTURE.md
scraper/locales/: en.json
scraper/src/gutenberg2zim/: .jsbeautifyrc  __about__.py  __main__.py  book_processor.py  constants.py  csv_catalog.py  database.py  download.py  entrypoint.py  export.py  i18n.py  iso639.py  l10n.py  models.py  pg_archive_urls.py  rdf.py  s3.py  schemas.py  scraper_progress.py  shared.py  utils.py  zim.py
scraper/src/gutenberg2zim/scripts/: __init__.py  validate_i18n.py
scraper/src/gutenberg2zim/templates/: Home.html  author.html  base.html  book_infobox.html  bookshelf.html  bookshelf_home.html  cover_article.html  lcc_shelf.html  (+1 more)
scraper/tests/: conftest.py  test_csv_catalog.py  test_dummy.py  test_epub_optimization.py  test_rdf.py  test_utils.py  test_zim_language.py
src/gutenberg2zim/: .jsbeautifyrc  __about__.py  __main__.py  book_processor.py  checkdeps.py  constants.py  csv_catalog.py  database.py  download.py  entrypoint.py  export.py  i18n.py  iso639.py  l10n.py  models.py  pg_archive_urls.py  rdf.py  s3.py  shared.py  urls.py  utils.py  zim.py
src/gutenberg2zim/scripts/: validate_i18n.py
src/gutenberg2zim/templates/: author.html  base.html  book_infobox.html  bookshelf.html  bookshelf_home.html  cover_article.html
tests/: test_dummy.py  test_rdf.py
ui/: .eslintrc.cjs  .gitignore  .prettierrc.json  README.md  env.d.ts  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json  tsconfig.vitest.json  vite.config.js  vite.config.ts  vitest.config.d.ts  vitest.config.js  vitest.config.ts  vitest.setup.ts
ui/scripts/: generate-language-names.js
ui/src/: App.vue  main.ts
ui/src/assets/: main.css
ui/src/composables/: useBookDisplay.ts  useCarousel.ts  useDetailView.ts  useFormatters.ts  useInfiniteScroll.ts  useIntersectionObserver.ts  useIsLccShelfPage.ts  useListLoader.spec.ts  useListLoader.ts  useMultiSelectFilter.spec.ts  useMultiSelectFilter.ts  usePagination.spec.ts  usePagination.ts  useSearchFilter.spec.ts  useSearchFilter.ts  useSorting.spec.ts  useSorting.ts  useTheme.ts
ui/src/constants/: messages.ts  theme.ts
ui/src/plugins/: i18n.ts  vuetify.ts
ui/src/router/: index.ts
ui/src/stores/: main.integration.spec.ts  main.ts
ui/src/types/: Author.ts  Book.ts  Config.ts  LCCShelf.ts  Sort.ts  index.ts
ui/src/utils/: format-utils.spec.ts  format-utils.ts  language-names.spec.ts  language-names.ts
ui/src/views/: AboutView.vue  AuthorDetailView.vue  AuthorListView.integration.spec.ts  AuthorListView.vue  BookDetailView.integration.spec.ts  BookDetailView.vue  BooksView.vue  HomeView.integration.spec.ts  HomeView.vue  LCCShelfDetailView.vue  LCCShelfListView.integration.spec.ts  LCCShelfListView.vue  NotFoundView.vue
zimui/: .eslintignore  .eslintrc.cjs  .gitignore  .node-version  .prettierignore  env.d.ts  index.html  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json  tsconfig.vitest.json  vite.config.ts  vitest.config.ts
zimui/src/: App.vue  main.ts
zimui/src/assets/: books.json
zimui/src/components/: AppHeader.vue  BookCard.vue  HelloWorld.vue  Sort.vue  SortControl.vue
zimui/src/composables/: useFavorites.ts  useHomePage.ts
zimui/src/plugins/: vuetify.ts
zimui/src/router/: index.ts
zimui/src/styles/: detail.css  style.css
zimui/src/types/: books.ts  sqljs.d.ts
zimui/src/views/: About.vue  AboutPage.vue  BookDetail.vue  FavoriteBook.vue  Home.vue  HomePage.vue
(+105 files in other folders)
